--- a/index.html
+++ b/index.html
@@ -7,64 +7,78 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-900">
-    <header class="bg-gradient-to-r from-blue-500 to-purple-600 text-white py-6 shadow-lg">
+    <header class="bg-gradient-to-r from-blue-500 to-purple-600 text-white py-6 shadow-lg relative">
         <div class="container mx-auto flex justify-between items-center px-6">
             <div class="flex items-center space-x-4">
                 <img src="lotus3.png" alt="Лотос" class="h-12">
-                <h1 class="text-2xl font-extrabold">Альтернативная Психология</h1>
+                <h1 class="text-xl md:text-2xl font-extrabold">Альтернативная Психология</h1>
             </div>
-            <nav class="space-x-6">
-                <a href="#psychography" class="text-white hover:underline">Психография</a>
-                <a href="#about" class="text-white hover:underline">О Нас</a>
-                <a href="#method" class="text-white hover:underline">Метод</a>
-                <a href="#products" class="text-white hover:underline">Продукты</a>
-                <a href="#news" class="text-white hover:underline">Новости</a>
-                <a href="#contacts" class="text-white hover:underline">Контакты</a>
+            <div class="md:hidden">
+                <button id="menu-toggle" class="text-white focus:outline-none">
+                    <svg class="w-6 h-6" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+                    </svg>
+                </button>
+            </div>
+            <nav id="menu" class="hidden absolute top-full left-0 w-full bg-blue-500 md:static md:bg-transparent md:flex md:space-x-6">
+                <a href="#home" class="block py-2 px-4 text-white hover:underline">Главная</a>
+                <a href="#psychography" class="block py-2 px-4 text-white hover:underline">Психография</a>
+                <a href="#about" class="block py-2 px-4 text-white hover:underline">О Нас</a>
+                <a href="#method" class="block py-2 px-4 text-white hover:underline">Метод</a>
+                <a href="#products" class="block py-2 px-4 text-white hover:underline">Продукты</a>
+                <a href="#news" class="block py-2 px-4 text-white hover:underline">Новости</a>
+                <a href="#contacts" class="block py-2 px-4 text-white hover:underline">Контакты</a>
             </nav>
         </div>
     </header>
 
-    <main class="container mx-auto px-6 py-12">
+    <main class="container mx-auto px-4 sm:px-6 py-12">
+        <!-- Главная -->
+        <section id="home" class="py-12 bg-gray-50">            
+				<h2 class="text-2xl md:text-3xl font-bold text-center text-purple-600 mb-8">Добро пожаловать в Альтернативную Психологию</h2>                
+				<p class="text-base md:text-lg text-center text-gray-700">Мы помогаем вам раскрыть личностный потенциал и обрести гармонию.</p>            
+        </section>
+
         <section id="psychography" class="py-12">
-            <h2 class="text-3xl font-bold text-center text-blue-600 mb-8">Психография</h2>
-            <p class="text-lg text-center text-gray-700">Узнайте, как наш уникальный подход к психографии помогает раскрыть личностный потенциал.</p>
+            <h2 class="text-2xl md:text-3xl font-bold text-center text-blue-600 mb-8">Психография</h2>
+            <p class="text-base md:text-lg text-center text-gray-700">Узнайте, как наш уникальный подход к психографии помогает раскрыть личностный потенциал.</p>
         </section>
 
         <section id="about" class="py-12 bg-gray-50">
-            <h2 class="text-3xl font-bold text-center text-purple-600 mb-8">О Нас</h2>
-            <p class="text-lg text-center text-gray-700">Мы предоставляем инновационные подходы к психологии, которые помогают найти гармонию.</p>
+            <h2 class="text-2xl md:text-3xl font-bold text-center text-purple-600 mb-8">О Нас</h2>
+            <p class="text-base md:text-lg text-center text-gray-700">Мы предоставляем инновационные подходы к психологии, которые помогают найти гармонию.</p>
         </section>
 
         <section id="method" class="py-12">
-            <h2 class="text-3xl font-bold text-center text-blue-600 mb-8">Метод</h2>
-            <p class="text-lg text-center text-gray-700">Наш метод сочетает традиционные и альтернативные подходы, создавая уникальную систему анализа.</p>
+            <h2 class="text-2xl md:text-3xl font-bold text-center text-blue-600 mb-8">Метод</h2>
+            <p class="text-base md:text-lg text-center text-gray-700">Наш метод сочетает традиционные и альтернативные подходы, создавая уникальную систему анализа.</p>
         </section>
 
         <section id="products" class="py-12 bg-gray-50">
-            <h2 class="text-3xl font-bold text-center text-purple-600 mb-8">Продукты</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <h2 class="text-2xl md:text-3xl font-bold text-center text-purple-600 mb-8">Продукты</h2>
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
                 <div class="bg-white shadow-md rounded p-6 text-center">
-                    <h3 class="text-xl font-semibold mb-4">Продукт 1</h3>
+                    <h3 class="text-lg md:text-xl font-semibold mb-4">Продукт 1</h3>
                     <p class="text-gray-600">Описание продукта 1.</p>
                 </div>
                 <div class="bg-white shadow-md rounded p-6 text-center">
-                    <h3 class="text-xl font-semibold mb-4">Продукт 2</h3>
+                    <h3 class="text-lg md:text-xl font-semibold mb-4">Продукт 2</h3>
                     <p class="text-gray-600">Описание продукта 2.</p>
                 </div>
                 <div class="bg-white shadow-md rounded p-6 text-center">
-                    <h3 class="text-xl font-semibold mb-4">Продукт 3</h3>
+                    <h3 class="text-lg md:text-xl font-semibold mb-4">Продукт 3</h3>
                     <p class="text-gray-600">Описание продукта 3.</p>
                 </div>
             </div>
         </section>
 
         <section id="news" class="py-12">
-            <h2 class="text-3xl font-bold text-center text-blue-600 mb-8">Новости</h2>
-            <p class="text-lg text-center text-gray-700">Последние обновления и события в области альтернативной психологии.</p>
+            <h2 class="text-2xl md:text-3xl font-bold text-center text-blue-600 mb-8">Новости</h2>
+            <p class="text-base md:text-lg text-center text-gray-700">Последние обновления и события в области альтернативной психологии.</p>
         </section>
 
         <section id="contacts" class="py-12 bg-gray-50">
-            <h2 class="text-3xl font-bold text-center text-purple-600 mb-8">Контакты</h2>
+            <h2 class="text-2xl md:text-3xl font-bold text-center text-purple-600 mb-8">Контакты</h2>
             <form class="max-w-md mx-auto space-y-6">
                 <input type="text" placeholder="Ваше имя" class="w-full p-4 border border-gray-300 rounded-lg">
                 <input type="email" placeholder="Ваш email" class="w-full p-4 border border-gray-300 rounded-lg">
@@ -79,5 +93,14 @@
             <p>&copy; 2024 Альтернативная Психология. Все права защищены.</p>
         </div>
     </footer>
+
+    <script>
+        const menuToggle = document.getElementById('menu-toggle');
+        const menu = document.getElementById('menu');
+
+        menuToggle.addEventListener('click', () => {
+            menu.classList.toggle('hidden');
+        });
+    </script>
 </body>
 </html>
