--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="bg-gradient-to-r from-blue-500 to-purple-600 text-white py-6 shadow-lg relative">
         <div class="container mx-auto flex justify-between items-center px-6">
             <div class="flex items-center space-x-4">
-                <img src="lotus3.png" alt="Лотос" class="h-12">
+                <img src="lotus.png" alt="Лотос" class="h-12">
                 <h1 class="text-xl md:text-2xl font-extrabold">Альтернативная Психология</h1>
             </div>
             <div class="md:hidden">
